--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Care n Cure || We care for you</title>
+  <title>CnC Institute for Competative Exams</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <script>// Import the functions you need from the SDKs you need
-  import { initializeApp } from "firebase/app";
-  import { getAnalytics } from "firebase/analytics";
+  // import { initializeApp } from "firebase/app";
+  // import { getAnalytics } from "firebase/analytics";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
   
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAEjQrcoqtJGqolAiZSe6IirY_yafQoF8I",
-    authDomain: "carencure-7f24d.firebaseapp.com",
-    databaseURL: "https://carencure-7f24d-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "carencure-7f24d",
-    storageBucket: "carencure-7f24d.appspot.com",
-    messagingSenderId: "109591154583",
-    appId: "1:109591154583:web:fe93bd642d48ad17a73ed2",
-    measurementId: "G-831VD7G0L0"
-  };
+  // const firebaseConfig = {
+  //   apiKey: "AIzaSyAEjQrcoqtJGqolAiZSe6IirY_yafQoF8I",
+  //   authDomain: "carencure-7f24d.firebaseapp.com",
+  //   databaseURL: "https://carencure-7f24d-default-rtdb.asia-southeast1.firebasedatabase.app",
+  //   projectId: "carencure-7f24d",
+  //   storageBucket: "carencure-7f24d.appspot.com",
+  //   messagingSenderId: "109591154583",
+  //   appId: "1:109591154583:web:fe93bd642d48ad17a73ed2",
+  //   measurementId: "G-831VD7G0L0"
+  // };
   
   // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  // const app = initializeApp(firebaseConfig);
+  // const analytics = getAnalytics(app);
 </script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
@@ -120,7 +120,7 @@
         <div class="col-md-6">
           <a href="/" class="logo d-flex align-items-center text-dark text-nowrap">
             <img src="images/logo_no_bg.png" alt="">
-            <h2>Home Care & Nursing</h2>
+            <h2>CnC Institute for Competative Exams</h2>
           </a>
         </div>
         <div class="col-md-6 text-right">
@@ -128,7 +128,7 @@
             <a href="javascript:void(0);" class="mobile-menu"><i class="ti-menu"></i></a>
             <ul>
               <li><a href="#home">Home</a></li>
-              <li><a href="#services">Services</a></li>
+              <li><a href="#services">Training</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#careers">Careers</a></li>
               <li><a href="#reviews">Reviews</a></li>
@@ -144,10 +144,10 @@
       <span class="bi bi-whatsapp" data-toggle="tooltip" data-placement="top" title="Chat with us"></span>
       <span class="d-none">Chat with us</span>
     </a>
-    <a class="video-btn pay-link d-flex align-items-center" data-fancybox href="images/payment.jpeg">
+    <!-- <a class="video-btn pay-link d-flex align-items-center" data-fancybox href="images/payment.jpeg">
       <span class="bi bi-credit-card text-dark" data-toggle="tooltip" data-placement="bottom" title="Payment"></span>
       <span class="d-none">Pay here</span>
-    </a>
+    </a> -->
   </div>
   <!-- Header strat -->
 
@@ -158,11 +158,11 @@
         <div class="col-lg-6 col-md-9 text-center">
           <div class="banner-content">
             <span>Vishakhapatnam & Hyderabad</span>
-            <p>We are there to erase the problems of the patients.</p>
-            <a class="video-btn" data-fancybox href="images/intro2.mp4">
+            <p>We are there to erase the problems of our students</p>
+            <!-- <a class="video-btn" data-fancybox href="images/intro2.mp4">
               <i class="ti-control-play"></i>
               Watch our story
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 m-auto">
           <div class="sec-heading">
-            <h3 class="sec-title" id="services">Our Services</h3>
+            <h3 class="sec-title" id="services">Our Trainings</h3>
             <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every
               wherein were meat kind wherein and martcin</p>
           </div>
@@ -281,7 +281,7 @@
   </section>
   <!-- Stats Count End -->
   <!-- Service section start -->
-  <section class="service">
+  <!-- <section class="service">
     <div class="service-caro owl-carousel container">
       <div class="single-service">
         <img src="images/career1.png" alt="">
@@ -399,7 +399,7 @@
         <img src="images/gallery27.png" alt="">
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Service section end -->
 
   <!-- About section start -->
