--- a/index.html
+++ b/index.html
@@ -18,31 +18,21 @@
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
     // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyB5DhS41LQbE_8EFNrpJ44zgpHpZalLstU",
-      authDomain: "cnc-competitive.firebaseapp.com",
-      projectId: "cnc-competitive",
-      storageBucket: "cnc-competitive.appspot.com",
-      messagingSenderId: "246408915237",
-      appId: "1:246408915237:web:b9b2bd7be3faf8ad6752cc",
-      measurementId: "G-GWP11ZJBKV"
+      apiKey: "AIzaSyBHMWm5p8z6P27dYyeg1Yvae6RdK29Buxw",
+      authDomain: "cnc-competative.firebaseapp.com",
+      projectId: "cnc-competative",
+      storageBucket: "cnc-competative.appspot.com",
+      messagingSenderId: "281418269365",
+      appId: "1:281418269365:web:690285416e08e0cf85b4fc"
     };
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script type="text/javascript">
-    (function () {
-      emailjs.init("qCLR5Lvey5ITKraIk");
-    })();
   </script>
 </head>
 
