--- a/public/index.html
+++ b/public/index.html
@@ -17,22 +17,26 @@
 
   <script type="module">
     // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
     // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyBHMWm5p8z6P27dYyeg1Yvae6RdK29Buxw",
-      authDomain: "cnc-competative.firebaseapp.com",
-      projectId: "cnc-competative",
-      storageBucket: "cnc-competative.appspot.com",
-      messagingSenderId: "281418269365",
-      appId: "1:281418269365:web:690285416e08e0cf85b4fc"
+      apiKey: "AIzaSyB-0_4dhItgtICOu0ZLPLMaxp7LL5wV0d8",
+      authDomain: "cnc-ice.firebaseapp.com",
+      projectId: "cnc-ice",
+      storageBucket: "cnc-ice.appspot.com",
+      messagingSenderId: "123683003413",
+      appId: "1:123683003413:web:638f22dd9435b032f4421c",
+      measurementId: "G-XPF74P3GQL"
     };
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 </head>
 
